--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>Hi! I'm Sabrina.</h1><img class="myface" height="300" src="myface.jpg" alt="Logo">
       </div><!-- /.blurb -->
        <div class="blurb"> 
-        I’m a highschool student passionate about computer science and engineering. I am a prospective computer engineering student and hope to assist in revolutionizing automation and artificial intelligence. Check out my resume below, and feel free to contact me. I'm always open to working on projects and would be excited to hear of any work oppourtunities. Check out more about me below!
+        I’m a highschool student passionate about innovation and design. I am a prospective computer engineering student and hope to assist in revolutionizing automation and artificial intelligence. Check out my resume below, and feel free to contact me. I'm always open to working on projects and would be excited to hear of any work oppourtunities. 
         <!-- img alt="Logo" src="ACCLogo.png" /--> 
       </div><!-- /.blurb -->
       <h3>Email: sabrinarosebutton@gmail.com</h3>
