--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <div id="events">
      <h1>My Projects</h1>
      <div class="blurb">
-        <h3>Hi! Thanks for taking an interest in what I've been up to. Unfortubately I haven't gotten around to populating this part of the site yet. In the mean time, you can check out a few of my projects on GitHub if you're interested.</h3> </div>
+        <h3>Hi! Thanks for taking an interest in what I've been up to. Unfortunately, I haven't gotten around to populating this part of the site yet. In the mean time, you can check out a few of my projects on GitHub if you're interested :).</h3> </div>
     </div>
   
   </body>
