--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>Hi! I'm Sabrina.</h1><img class="myface" height="300" src="myface.jpg" alt="Logo">
       </div><!-- /.blurb -->
        <div class="blurb"> 
-        I'm a grade 12 student passionate about innovation and design based in Ottawa, Ontario. I love video games, indie-rock music and oatmeal (sounds strange, I know).  I am a prospective computer engineering student and hope to make an impact in the development of emerging technologies such as automation and artificial intelligence. Check out my resume below, and feel free to contact me. I'm always open to working on projects and would be excited to hear of any work oppourtunities! 
+        I'm a grade 12 student passionate about innovation and design based in Ottawa, Ontario. I love oatmeal.  I am a prospective computer engineering student and hope to make an impact in the development of emerging technologies such as automation and artificial intelligence. Check out my resume below, and feel free to contact me. I'm always open to working on projects and would be excited to hear of any work oppourtunities! 
       </div><!-- /.blurb -->
       <h3>Email: sabrinarosebutton@gmail.com</h3>
       <h3>Phone: (613)-807-9041</h3>
@@ -34,7 +34,8 @@
         <h2>Access my Resumé</h2>
      
        <div class="blurb"> 
-        You can access the most recent copy of my entire resumé <a href="https://drive.google.com/file/d/1FbJdUP8aLQn2obWwh9tKjoj1wR8Dh9zF/view">here (click me!)</a>.
+         I have deprecated this part of the site temporarily to update my resume.
+       <!-- You can access the most recent copy of my entire resumé <a href="#">here (click me!)</a /-->.
       
          <!-- img alt="Logo" src="ACCLogo.png" /--> 
       </div><!-- /.blurb -->
