--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <h2>Access my Resumé</h2>
      
        <div class="blurb"> 
-         I have deprecated this part of the site temporarily to update my resume.
-       <!-- You can access the most recent copy of my entire resumé <a href="#">here (click me!)</a /-->.
+         You can access the most recent copy of my entire resumé <a href="https://drive.google.com/file/d/126VUIWxKOPPpX5QQfBRPfYEg8PPtUkHP/view?usp=sharing">here (click me!)</a>.
       
          <!-- img alt="Logo" src="ACCLogo.png" /--> 
       </div><!-- /.blurb -->
