--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>Hi! I'm Sabrina.</h1><img class="myface" height="300" src="myface.jpg" alt="Logo">
       </div><!-- /.blurb -->
        <div class="blurb"> 
-        I'm a grade 12 student passionate about innovation and design based in Ottawa, Ontario. I am a prospective computer engineering student and hope to make an impact in the development of emerging technologies such as automation and artificial intelligence. Check out my resume below, and feel free to contact me. Random fact, since you got this far: I love oatmeal. I'm always open to working on projects and would be excited to hear of any work oppourtunities! 
+        I'm a grade 12 student passionate about innovation and design based in Ottawa, Ontario. I am a prospective computer engineering student and hope to make an impact in the development of emerging technologies such as automation and artificial intelligence. Check out my resume below, and feel free to contact me. I'm always open to working on projects and would be excited to hear of any work oppourtunities! 
       </div><!-- /.blurb -->
       <h3>Email: sabrinarosebutton@gmail.com</h3>
       <h3>Phone: (613)-807-9041</h3>
