--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/le-murmure" rel="stylesheet">
+                
   </head>
   <body>
     <div id="root"></div>
