--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sabrina Button</title>
+    <title>Sabrina Button | Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/master.css">
-    <link rel="shortcut icon" type="image/png" href="../src/images/logo.png"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="./favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    
+
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/le-murmure" rel="stylesheet">
                 
